--- a/index.html
+++ b/index.html
@@ -19,13 +19,39 @@
     <div id="app">
         <div class="wrapper">
             <main class="shadow">
-                <div class="row">
-                    <div class="col-2 col-md-4 border-1 border">
-                        ciao
+                <div class="row h-100">
+                    <div class="col-3 col-md-5 border-1 border">
+
 
                     </div>
-                    <div class="col-10 col-md-8 border border-1 ">
-                        ciao2
+                    <div class="col-9 col-md-7 border border-1 ">
+                        <div class="top-content d-flex align-items-center justify-content-between">
+                            <div class="d-flex mt-1">
+                                <div class="top-img">
+                                    <img class="img-fluid rounded-5" src="./img/avatar_1.jpg" alt="" srcset="">
+                                </div>
+                                <div class="ps-2">
+                                    <h6 class="m-0 fw">Michele</h6>
+                                    <p class="m-0">ultimo accesso oggi alle 12.00</p>
+                                </div>
+                            </div>
+
+                            <div class="d-flex">
+                                
+                                <div class="icons d-none d-sm-block">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </div>
+                                
+                                <div class="icons">
+                                    <i class="fa-solid fa-paperclip d-none d-sm-block"></i>
+                                </div>
+                                <div class="icons">
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </div>
+                            </div>
+
+
+                        </div>
 
                     </div>
 
