--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <div class="notify d-flex align-items-center ps-2">
-                            <div class="top-img ">
+                            <div class="top-img ms-4 ms-md-0">
                                 <img class="img-fluid rounded-5 bell" src="./img/bell-ban.svg" alt="" srcset="">
                             </div>
                             <div class=" d-none d-md-block ps-2">
@@ -53,7 +53,10 @@
                                 <p class="m-0 p-note text-decoration-underline">attiva notifiche desktop</p>
                             </div>
                         </div>
-                        
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
+                            <input type="text" class="form-control" placeholder="Cerca" aria-label="Username" aria-describedby="basic-addon1">
+                          </div>
                     </div>
                     <div class="col-9 col-md-7 border border-1 ">
                         <div class="top-content d-flex align-items-center justify-content-between">
