--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                                 <p class="m-0 p-note text-decoration-underline">attiva notifiche desktop</p>
                             </div>
                         </div>
-                        <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
-                            <input type="text" class="form-control" placeholder="Cerca" aria-label="Username" aria-describedby="basic-addon1">
+                        <div class="input-group mb-3 p-1">
+                            <span class="input-group-text rounded-0 text-secondary" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
+                            <input type="text" class="form-control rounded-0" placeholder="Cerca" aria-describedby="basic-addon1">
                           </div>
                     </div>
                     <div class="col-9 col-md-7 border border-1 ">
