--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="wrapper">
             <main class="shadow">
                 <div class="row h-100">
-                    <div class="col-3 col-md-5 border-1 border pe-0">
+                    <div class="col-3 col-md-5 pe-0">
                         <div class="top-content d-flex align-items-center justify-content-between">
                             <div class="d-md-flex mt-1 ps-2 align-items-center">
                                 <div class="top-img m-auto">
@@ -39,7 +39,7 @@
                                 <div class="icons d-none d-md-block">
                                     <img src="./img/message-icon.svg" alt="" srcset="">
                                 </div>
-                                <div class="icons d-none d-md-block text-dark">
+                                <div class="icons d-none d-md-block">
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </div>
                             </div>
@@ -53,12 +53,12 @@
                                 <p class="m-0 p-note text-decoration-underline">attiva notifiche desktop</p>
                             </div>
                         </div>
-                        <div class="input-group mb-3 p-1">
+                        <div class="input-group p-1">
                             <span class="input-group-text rounded-0 text-secondary" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
                             <input type="text" class="form-control rounded-0" placeholder="Cerca" aria-describedby="basic-addon1">
                           </div>
                     </div>
-                    <div class="col-9 col-md-7 border border-1 ">
+                    <div class="col-9 col-md-7 border-start border-secondary">
                         <div class="top-content d-flex align-items-center justify-content-between">
                             <div class="d-flex mt-1">
                                 <div class="top-img">
@@ -83,6 +83,8 @@
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </div>
                             </div>
+
+
 
 
                         </div>
