--- a/index.html
+++ b/index.html
@@ -21,65 +21,95 @@
             <main class="shadow">
                 <div class="row h-100">
                     <div class="col-3 col-md-5 pe-0">
-                        <div class="top-content d-flex align-items-center justify-content-between">
-                            <div class="d-md-flex mt-1 ps-2 align-items-center">
-                                <div class="top-img m-auto">
-                                    <img class="img-fluid rounded-5" src="./img/avatar_2.jpg" alt="" srcset="">
+                        <div class="top-left">
+                            <div class="top-content d-flex align-items-center justify-content-between">
+                                <div
+                                    class="d-flex flex-column flex-md-row mt-1 ps-2 align-items-center justify-content-center">
+
+
+                                    <div class="top-img p-1">
+                                        <img class="img-fluid rounded-5" src="./img/avatar_2.jpg" alt="" srcset="">
+                                    </div>
+                                    <div class="ps-2">
+                                        <h6 class="m-0 fw">Romualdo</h6>
+                                    </div>
                                 </div>
-                                <div class="ps-2">
-                                    <h6 class="m-0 fw">Romualdo</h6>
+                                <div class="d-flex">
+
+                                    <div class="icons d-none d-md-block">
+                                        <img src="./img/status-icon.svg" alt="" srcset="">
+                                    </div>
+
+                                    <div class="icons d-none d-md-block">
+                                        <img src="./img/message-icon.svg" alt="" srcset="">
+                                    </div>
+                                    <div class="icons d-none d-md-block">
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="d-flex">
-
-                                <div class="icons d-none d-md-block">
-                                    <img src="./img/status-icon.svg" alt="" srcset="">
+                            <div class="notify d-flex align-items-center ps-2">
+                                <div class="top-img ms-4 ms-md-0">
+                                    <img class="img-fluid rounded-5 bell" src="./img/bell-ban.svg" alt="" srcset="">
                                 </div>
-
-                                <div class="icons d-none d-md-block">
-                                    <img src="./img/message-icon.svg" alt="" srcset="">
+                                <div class=" d-none d-md-block ps-2">
+                                    <h6 class="m-0 h-note">Ricevi notifiche di nuovi messaggi</h6>
+                                    <p class="m-0 p-note text-decoration-underline">attiva notifiche desktop</p>
                                 </div>
-                                <div class="icons d-none d-md-block">
-                                    <i class="fa-solid fa-ellipsis-vertical"></i>
-                                </div>
+                            </div>
+                            <div class="input-group p-1">
+                                <span class="input-group-text rounded-0 text-secondary" id="basic-addon1"><i
+                                        class="fa-solid fa-magnifying-glass"></i></span>
+                                <input type="text" class="form-control rounded-0" placeholder="Cerca"
+                                    aria-describedby="basic-addon1">
                             </div>
                         </div>
-                        <div class="notify d-flex align-items-center ps-2">
-                            <div class="top-img ms-4 ms-md-0">
-                                <img class="img-fluid rounded-5 bell" src="./img/bell-ban.svg" alt="" srcset="">
+                        <div class="left-contacts bg-light">
+                            <div v-for="contact in contacts"
+                                class="d-flex flex-column flex-md-row border-top pb-2 border bg-light align-items-center justify-content-between">
+                                <div
+                                    class="pt-3 d-flex flex-column flex-md-row align-items-center justify-content-center p-2">
+                                    <div class="top-img">
+                                        <img class="img-fluid rounded-5" :src="contact.avatar" :alt="contact.name"
+                                            srcset="">
+                                    </div>
+                                    <div class="ps-2 ">
+                                        <h6 class="">{{contact.name}}</h6>
+                                        <p class="m-0 fw-semibold d-none d-md-block">Ultimo messaggio inviato</p>
+                                    </div>
+                                </div>
+
+                                <p class="me-2 fw-semibold d-none d-md-block">12.00</p>
+
                             </div>
-                            <div class=" d-none d-md-block ps-2">
-                                <h6 class="m-0 h-note">Ricevi notifiche di nuovi messaggi</h6>
-                                <p class="m-0 p-note text-decoration-underline">attiva notifiche desktop</p>
-                            </div>
+
                         </div>
-                        <div class="input-group p-1">
-                            <span class="input-group-text rounded-0 text-secondary" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
-                            <input type="text" class="form-control rounded-0" placeholder="Cerca" aria-describedby="basic-addon1">
-                          </div>
+
+
                     </div>
-                    <div class="col-9 col-md-7 border-start border-secondary">
-                        <div class="top-content d-flex align-items-center justify-content-between">
-                            <div class="d-flex mt-1">
+                    <div class="col-9 col-md-7 border-start border-secondary ps-0">
+                        <div
+                            class="top-content d-flex align-items-center justify-content-between">
+                            <div class="d-flex ps-2 ">
                                 <div class="top-img">
                                     <img class="img-fluid rounded-5" src="./img/avatar_1.jpg" alt="" srcset="">
                                 </div>
-                                <div class="ps-2">
+                                <div class="ps-3">
                                     <h6 class="m-0">Michele</h6>
-                                    <p class="m-0">ultimo accesso oggi alle 12.00</p>
+                                    <p class="m-0 fw-semibold">Ultimo accesso oggi alle 12.00</p>
                                 </div>
                             </div>
 
-                            <div class="d-flex">
+                            <div class="d-flex ">
 
-                                <div class="icons d-none d-sm-block">
+                                <div class="icons d-none d-sm-block pt-2">
                                     <i class="fa-solid fa-magnifying-glass"></i>
                                 </div>
 
-                                <div class="icons">
+                                <div class="icons d-flex align-items-center justify-content-center">
                                     <i class="fa-solid fa-paperclip d-none d-sm-block"></i>
                                 </div>
-                                <div class="icons">
+                                <div class="icons d-flex align-items-center justify-content-center">
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </div>
                             </div>
@@ -88,7 +118,19 @@
 
 
                         </div>
+                        <div class="main-content">
 
+                        </div>
+                        <div class="input-group mb-3 p-1">
+                            <button class="btn btn-outline-secondary rounded-0 border-0" type="button">
+                                <i class="fa-regular fa-face-smile"></i>
+                            </button>
+                            <input type="text" class="form-control" placeholder="Scrivi Messaggio..."
+                                aria-label="Example text with two button addons">
+                            <button class="btn btn-outline-secondary rounded-0 border-0" type="button">
+                                <i class="fa-solid fa-paper-plane"></i>
+                            </button>
+                        </div>
                     </div>
 
                 </div>
