--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="wrapper">
             <main class="shadow">
                 <div class="row h-100">
-                    <div class="col-3 col-md-5 pe-0">
+                    <div class="col-12 col-md-5">
                         <div class="top-left">
                             <div class="top-content d-flex align-items-center justify-content-between">
                                 <div
-                                    class="d-flex flex-column flex-md-row mt-1 ps-2 align-items-center justify-content-center">
+                                    class="d-flex mt-1 ps-2 align-items-center justify-content-center">
 
 
                                     <div class="top-img p-1">
@@ -36,14 +36,14 @@
                                 </div>
                                 <div class="d-flex">
 
-                                    <div class="icons d-none d-md-block">
+                                    <div class="icons">
                                         <img src="./img/status-icon.svg" alt="" srcset="">
                                     </div>
 
-                                    <div class="icons d-none d-md-block">
+                                    <div class="icons">
                                         <img src="./img/message-icon.svg" alt="" srcset="">
                                     </div>
-                                    <div class="icons d-none d-md-block">
+                                    <div class="icons">
                                         <i class="fa-solid fa-ellipsis-vertical"></i>
                                     </div>
                                 </div>
@@ -52,12 +52,12 @@
                                 <div class="top-img ms-4 ms-md-0">
                                     <img class="img-fluid rounded-5 bell" src="./img/bell-ban.svg" alt="" srcset="">
                                 </div>
-                                <div class=" d-none d-md-block ps-2">
+                                <div class="ps-2">
                                     <h6 class="m-0 h-note">Ricevi notifiche di nuovi messaggi</h6>
                                     <p class="m-0 p-note text-decoration-underline">attiva notifiche desktop</p>
                                 </div>
                             </div>
-                            <div class="input-group p-1">
+                            <div class="input-group pt-1">
                                 <span class="input-group-text rounded-0 text-secondary" id="basic-addon1"><i
                                         class="fa-solid fa-magnifying-glass"></i></span>
                                 <input type="text" class="form-control rounded-0" placeholder="Cerca"
@@ -66,20 +66,20 @@
                         </div>
                         <div class="left-contacts bg-light">
                             <div v-for="contact in contacts"
-                                class="d-flex flex-column flex-md-row border-top pb-2 border bg-light align-items-center justify-content-between">
+                                class="d-flex border-top pb-2 border bg-light align-items-center justify-content-between">
                                 <div
-                                    class="pt-3 d-flex flex-column flex-md-row align-items-center justify-content-center p-2">
+                                    class="pt-3 d-flex align-items-center justify-content-center p-2">
                                     <div class="top-img">
                                         <img class="img-fluid rounded-5" :src="contact.avatar" :alt="contact.name"
                                             srcset="">
                                     </div>
                                     <div class="ps-2 ">
                                         <h6 class="">{{contact.name}}</h6>
-                                        <p class="m-0 fw-semibold d-none d-md-block">Ultimo messaggio inviato</p>
+                                        <p class="m-0 fw-semibold">Ultimo messaggio inviato</p>
                                     </div>
                                 </div>
 
-                                <p class="me-2 fw-semibold d-none d-md-block">12.00</p>
+                                <p class="me-2 fw-semibold">12.00</p>
 
                             </div>
 
@@ -87,7 +87,7 @@
 
 
                     </div>
-                    <div class="col-9 col-md-7 border-start border-secondary ps-0">
+                    <div class="col-12 col-md-7 border-start border-secondary ps-0">
                         <div
                             class="top-content d-flex align-items-center justify-content-between">
                             <div class="d-flex ps-2 ">
@@ -102,7 +102,7 @@
 
                             <div class="d-flex ">
 
-                                <div class="icons d-none d-sm-block pt-2">
+                                <div class="icons pt-2">
                                     <i class="fa-solid fa-magnifying-glass"></i>
                                 </div>
 
@@ -125,7 +125,7 @@
                             <button class="btn btn-outline-secondary rounded-0 border-0" type="button">
                                 <i class="fa-regular fa-face-smile"></i>
                             </button>
-                            <input type="text" class="form-control" placeholder="Scrivi Messaggio..."
+                            <input type="text" class="form-control pb-1" placeholder="Scrivi Messaggio..."
                                 aria-label="Example text with two button addons">
                             <button class="btn btn-outline-secondary rounded-0 border-0" type="button">
                                 <i class="fa-solid fa-paper-plane"></i>
