--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
                             </div>
                         </div>
                         <div class="left-contacts bg-light">
-                            <div v-for="contact in contacts" class="rubric">
+                            <div v-for="(contact, index) in contacts" class="rubric" :key="index" @click="setActive(index)" :class="{active: activeIndex === index}">
                                 <div class="row">
 
-                                      <div class="col-10 p-3 d-flex">
-                                    <div class="top-img">
-                                        <img class="img-fluid rounded-circle" :src="contact.avatar" :alt="contact.name"
-                                            srcset="">
+                                    <div class="col-10 p-3 d-flex">
+                                        <div class="top-img">
+                                            <img class="img-fluid rounded-circle" :src="contact.avatar"
+                                                :alt="contact.name" srcset="">
+                                        </div>
+                                        <div class="ps-2 ">
+                                            <h6 class="">{{contact.name}}</h6>
+                                            <p class="m-0 fw-semibold">Ultimo messaggio inviato</p>
+                                        </div>
                                     </div>
-                                    <div class="ps-2 ">
-                                        <h6 class="">{{contact.name}}</h6>
-                                        <p class="m-0 fw-semibold">Ultimo messaggio inviato</p>
-                                    </div>
-                                </div>
-                                <div class="col-2 pt-3">
-                                    <p class="me-2 fw-semibold">12.00</p>
+                                    <div class="col-2 pt-3">
+                                        <p class="me-2 fw-semibold">12.00</p>
 
+                                    </div>
                                 </div>
-                                </div>
-                              
+
                             </div>
 
                         </div>
