fix overflow left-contacts

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="wrapper">
             <main class="shadow">
                 <div class="row h-100">
-                    <div class="col-12 col-md-5 h-100 left-side">
+                    <div class="col-12 col-md-5 h-100 left-side height pe-0">
                         <div class="top-left">
                             <div class="top-content d-flex align-items-center justify-content-between">
                                 <div class="d-flex mt-1 ps-2 align-items-center justify-content-center">
@@ -93,7 +93,7 @@
 
 
                     </div>
-                    <div class="col-12 col-md-7 border-start border-secondary ps-0">
+                    <div class="col-12 col-md-7 border-start border-secondary ps-0 height">
                         <div class="top-content d-flex align-items-center justify-content-between">
                             <div class="d-flex ps-2 ">
                                 <div class="top-img">
