--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                         <div class="main-content p-3 d-flex flex-column align-items-start">
                             <div v-for="(message, index) in activeContact.messages" :class="[message.status, 'mess']"
-                                :key="index">
+                                :key="index" ref="activeContact">
                                 <div v-if="activeContact">
                                     <span class="fw-semibold  m-2 pm-2">{{ message.message }}</span>
                                     <p class="text-end m-0 p-2">{{ message.date }}</p>
