fic background and padding

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="wrapper">
             <main class="shadow">
                 <div class="row h-100">
-                    <div :class="visible ? 'd-none d-sm-block' : '' " class="col-12 col-sm-5 h-100 left-side height pe-0">
+                    <div :class="visible ? 'd-none d-sm-block' : '' " class="col-12 col-sm-5 h-100 left-side height p-0">
                         <div class="top-left">
                             <div class="top-content d-flex align-items-center justify-content-between">
                                 <div class="d-flex mt-1 ps-2 align-items-center justify-content-center">
@@ -47,7 +47,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="notify d-flex align-items-center ps-2">
+                            <div class="notify d-flex align-items-center ps-2 me-2">
                                 <div class="top-img ms-4 ms-md-0">
                                     <img class="img-fluid rounded-5 bell" src="./img/bell-ban.svg" alt="" srcset="">
                                 </div>
@@ -93,8 +93,8 @@
 
 
                     </div>
-                    <div :class="visible ? 'd-block': 'd-none' " class="col-12 col-sm-7 border-start border-secondary ps-0 height d-sm-block">
-                        <div class="top-content d-flex align-items-center justify-content-between">
+                    <div :class="visible ? 'd-block': 'd-none' " class="col-12 col-sm-7 border-start border-secondary p-0 height d-sm-block">
+                        <div class="top-content d-flex align-items-center justify-content-between mt-2">
                             <div class="d-flex ps-2 ">
                                 <div class="top-img">
                                     <img class="img-fluid rounded-5" :src="activeContact.avatar"
